--- a/weatherApp/Base.lproj/Main.storyboard
+++ b/weatherApp/Base.lproj/Main.storyboard
@@ -25,41 +25,45 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uNM-Hq-Ico">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="sfH-TI-VJt">
-                                        <rect key="frame" x="228" y="42" width="120" height="240"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" distribution="fillProportionally" alignment="center" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="sfH-TI-VJt">
+                                        <rect key="frame" x="228" y="42" width="120" height="158"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3XE-6E-88Y">
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3XE-6E-88Y">
                                                 <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="120" id="5vZ-Tu-AHm"/>
                                                     <constraint firstAttribute="width" constant="120" id="tWr-uV-Q7c"/>
                                                 </constraints>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Sunny" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MBT-qh-8bV">
-                                                <rect key="frame" x="35" y="120" width="50.333333333333314" height="120"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sunny" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MBT-qh-8bV">
+                                                <rect key="frame" x="35" y="133" width="50.333333333333314" height="24.666666666666657"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="MBT-qh-8bV" firstAttribute="centerX" secondItem="sfH-TI-VJt" secondAttribute="centerX" id="GhH-3X-Bkd"/>
+                                            <constraint firstItem="3XE-6E-88Y" firstAttribute="centerX" secondItem="sfH-TI-VJt" secondAttribute="centerX" id="V9k-IA-cwx"/>
+                                        </constraints>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="B14-uJ-UQG">
-                                        <rect key="frame" x="22" y="14" width="117" height="246"/>
+                                    <stackView opaque="NO" contentMode="scaleAspectFit" misplaced="YES" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="B14-uJ-UQG">
+                                        <rect key="frame" x="22" y="14" width="117" height="205"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today, May 19" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ucg-cN-JSR">
-                                                <rect key="frame" x="0.0" y="0.0" width="117.33333333333334" height="82"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="117.33333333333334" height="68.333333333333329"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="42°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZtK-el-AtA">
-                                                <rect key="frame" x="7.3333333333333357" y="82" width="102.66666666666666" height="82"/>
-                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="60"/>
+                                                <rect key="frame" x="16" y="68.333333333333343" width="85.666666666666671" height="68.333333333333343"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="50"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chennai" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eYq-e1-R7D">
-                                                <rect key="frame" x="24.333333333333336" y="164" width="69" height="82"/>
+                                                <rect key="frame" x="24.333333333333336" y="136.66666666666663" width="69" height="68.333333333333343"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
@@ -69,10 +73,10 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.31764705879999999" green="0.64313725489999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstItem="sfH-TI-VJt" firstAttribute="top" secondItem="uNM-Hq-Ico" secondAttribute="top" constant="40" id="7kL-E0-fnI"/>
+                                    <constraint firstAttribute="trailing" secondItem="sfH-TI-VJt" secondAttribute="trailing" constant="20" id="ALV-t6-dr9"/>
                                     <constraint firstItem="B14-uJ-UQG" firstAttribute="top" secondItem="uNM-Hq-Ico" secondAttribute="top" constant="10" id="Zbg-5x-KHt"/>
-                                    <constraint firstAttribute="trailing" secondItem="sfH-TI-VJt" secondAttribute="trailing" id="orR-4s-WGg"/>
                                     <constraint firstItem="B14-uJ-UQG" firstAttribute="leading" secondItem="uNM-Hq-Ico" secondAttribute="leading" constant="20" id="yJc-ot-a38"/>
-                                    <constraint firstAttribute="trailing" secondItem="sfH-TI-VJt" secondAttribute="trailing" id="zhX-hb-Iog"/>
                                     <constraint firstAttribute="height" constant="300" id="zw8-WS-WNM"/>
                                 </constraints>
                             </view>
